--- a/7.6_오라클정리.md
+++ b/7.6_오라클정리.md
@@ -1,4 +1,4 @@
-#dbnote
+###dbnote
 
 --employees 테이블로부터 아이디를 조회하는 질의문<이렇게 주석처리할 수 있음.
 SELECT *
@@ -21,6 +21,7 @@ SELECT last_name, salary
 FROM employees
 ORDER BY salary;
 
+
 중복을 제거해줄 수 있는 DISTINCT 구문.
 SELECT employee_id, job_id
 FROM employees
@@ -41,6 +42,7 @@ ORDER BY department_id, salary DESC, last_name;
 
 
 ROLLBACK;
+-------------
 DELETE문을 사용해 삭제한 후 롤백으로 데이터 복구가 가능하다. 
 TRUNCATE를 사용해 데이터를 지우면 빠르게 삭제되나, 복구가 되지 않는다.
 
@@ -292,9 +294,11 @@ unique는 null값을 허용함.
 ON DELETE CASCADE->참조 된 것까지 다같이 삭제
 
 #부속질의
+-------------
 보통 부속질의라고 하면 WHERE 부속질의를 말한다. 부속질의들 간에 구분이 필요할 때 WHERE 부속질의를 중첩질의라고 부르기도 한다.
 
 부속질의의 종류
+-------------
 
 스칼라 부속질의
 SELECT절에서 사용되는 부속질의로, 부속질의의 결과 값을 단일 행, 단일 열의 스칼라 값으로 반환한다. 만약 결과 값이 다중 행이거나
