--- a/7.6_오라클정리.md
+++ b/7.6_오라클정리.md
@@ -1,4 +1,4 @@
-###dbnote
+#dbnote
 
 --employees 테이블로부터 아이디를 조회하는 질의문<이렇게 주석처리할 수 있음.
 SELECT *
@@ -20,7 +20,6 @@ FROM employees;
 SELECT last_name, salary
 FROM employees
 ORDER BY salary;
-
 
 중복을 제거해줄 수 있는 DISTINCT 구문.
 SELECT employee_id, job_id
@@ -46,18 +45,19 @@ ROLLBACK;
 DELETE문을 사용해 삭제한 후 롤백으로 데이터 복구가 가능하다. 
 TRUNCATE를 사용해 데이터를 지우면 빠르게 삭제되나, 복구가 되지 않는다.
 
-
+-------------
 Descending 내림차순
 Ascending 오름차순
-
+-------------
 
 sysdate 현재 시스템상의 날짜와 시간을 반영가능할 수 있도록 하는 함수.
+-------------
 
 HAVING 절은 그룹에 대한 제한을 두고자 할 경우에 사용함.
 그룹함수와 함께 사용.
 GROUP BY  뒤에다가 적용.
 
-#GROUP BY 절
+GROUP BY 절
 -------------
 FROM절과 WHERE 절 뒤에 오며, 데이터들을 작은 그룹으로 분류하여 소그룹에 대한 항목별로 통계정보를 얻을 때 추가로 사용함. GROUP 절과 HAVING절의 특성
 n GROUP BY 절을 통해 소그룹별 기준을 정한 후, SELECT 절에 집계 함수 사용한다.
@@ -78,6 +78,11 @@ FROM TABLE_NUM
 [GROUP BY 속성]
 [HAVING EXPRESSION]
 
+JOIN 조인
+
+EQUI JOIN
+left join, right join
+
 CROSS JOIN 
 -m x n
 속성 명이 같고 도메인이 같은 것을 지정해줌.
@@ -94,10 +99,11 @@ A테이블과 B테이블이 있는 경우 공통된 값을 테이블에 도출 시킨 뒤 왼쪽에 있는 테이
 
 
 --
-#아름이가 알려준 조인에 대한 개념
+아름이가 알려준 조인에 대한 개념
 --
 
-쿼리문이해부터
+쿼리문 이해부터
+
 select * 
 from 테이블
 where 컬럼 = '1';
@@ -130,7 +136,6 @@ WHERE A.닉네임 = '달리';
 
 --------------------------------------
 #EQUI JOIN
--------------
 outer join(left, right)에 대한 개념만 가져가면 됨.
 공통된 결과값만 반영하는 것이 equi join
 그러나 여기엔 있지만 저기엔 없는 것도 전체 반영해야할 때가 있음.
@@ -156,15 +161,22 @@ alter, modified, drop
 
 selection, projection
 
+=
 
 중복되는 것도 보이고 싶을 때 *
 따로 DISTINCT 쓰면 중복되는 것을 제거할 수 있음.
-
 일시적으로 사용됨. 효용이 별로 없음. 카티전 프로덕트.
-
+==
+!=
+<>
+테이블이 들어가는 공간을 확보해야함.
+보통은 시스템 영역임.
+테이블 스페이스.
+우리가 만드는 테이블 스페이스에 할당이 되게끔 파일이 들어가도록 할거임.
+관리자 영역을 실습할 것임.
 
 create tablespace 테이블스페이스 이름
-data '데이터파일경로'
+--data '데이터파일경로'
 size초기사이즈
 autoextend on next 자동증가사이즈
 maxsize 최대사이즈;
@@ -282,11 +294,9 @@ unique는 null값을 허용함.
 ON DELETE CASCADE->참조 된 것까지 다같이 삭제
 
 #부속질의
--------------
 보통 부속질의라고 하면 WHERE 부속질의를 말한다. 부속질의들 간에 구분이 필요할 때 WHERE 부속질의를 중첩질의라고 부르기도 한다.
 
 부속질의의 종류
--------------
 
 스칼라 부속질의
 SELECT절에서 사용되는 부속질의로, 부속질의의 결과 값을 단일 행, 단일 열의 스칼라 값으로 반환한다. 만약 결과 값이 다중 행이거나
@@ -300,25 +310,20 @@ SELECT절에서 사용되는 부속질의로, 부속질의의 결과 값을 단일 행, 단일 열의 스칼라
 주질의(main query, 외부질의)와 부속질의(sub query, 내부 질의)로 구성된다.
 
 인라인 뷰
--------------
 FROM절에서 결과를 뷰(view)형태로 반환하기 때문에 인라인 뷰라고 한다.
 
 중첩질의
--------------
 WHERE절에 술어와 같이 사용되며 결과를 한정 시키기 위해 사용된다. 상관 혹은 비상관 형태이다.
 
 조인을 사용할 경우 
--------------
 : customer테이블과 orders테이블의 고객번호로 조인을 한 후, 필요한 데이터를 추출하는 방식.
 
 부속질의를 사용할 경우
--------------
 : customer 테이블에서 박지성 고객의 고객번호를 찾고, 찾은 고객번호를 바탕으로 orders 테이블에서 확인한다. 
 
 IN은 NULL값을 가져올 수 없다. EXISTS는 NULL값을 가져올 수 있음.
 
 #EXISTS에 대한 개념↓
--------------
 
 SELECT name, address
 FROM customer cs
@@ -334,14 +339,13 @@ ORDER BY절과 GROUP BY절이 헷갈린다.
 다시 정리를 한다.
 
 #ON절과 WHERE절
--------------
 
 WHERE절은 조건에 맞는 검색을 할 때 사용한다. 부속질의(중첩질의)에서도 사용됨. 
 조건으로 사용할 수 있는 술어 는 비교, 범위, 집합, 패턴, NULL로 구분할 수 있다.
 
 
-#ORDER BY절과 GROUP BY절의 차이(너무 헷갈림)
--------------
+#ORDER BY절과 
+GROUP BY절의 차이(너무 헷갈림)
 두 개의 절은 비슷한 느낌이 있어서 혼동되기 쉬우나, 
 엄연히 다른 역할을 수행하고 있기 때문에 다르다.
 우선, ORDER BY절은 어떠한 조회된 결과의 데이터물을 일목요연하게 정리하고 싶을 때,
@@ -377,11 +381,9 @@ NULL값은 오름차순으로 정렬했을 경우에는 가장 마지막에,
  
 
 WHERE절과 ON절에 대해 
--------------
-ON절은 조인 구문에서만 사용된다.
+우선 ON절은 조인 구문에서만 사용된다.
 
 JOIN
--------------
 조인은 그냥 간단히 말해서 테이블과 다른 테이블의 행들을 연결해서 두 개이상의 테이블을 
 결합하는 것을 말한다.
 조건이 없는 테이블 간의 조인은 카티전 프로덕트라고 한다. 
