--- a/7.6_오라클정리.md
+++ b/7.6_오라클정리.md
@@ -279,18 +279,19 @@ FOREIGN KEY custid REFERENCES customer(custid),
 우리가 데이터를 정의하면서 정리를 해줘야 함.
 인서트할 때 문제가 생기면 ~ 해라 < 제약조건(constraint)
 
-INSERT 구문 
 
 Primary키는 null값을 허용하지 않음.
 unique는 null값을 허용함.
 ON DELETE CASCADE->참조 된 것까지 다같이 삭제
 
 #부속질의
+-------------
 보통 부속질의라고 하면 WHERE 부속질의를 말한다. 부속질의들 간에 구분이 필요할 때 WHERE 부속질의를 중첩질의라고 부르기도 한다.
 
 부속질의의 종류
-
+-------------
 스칼라 부속질의
+-------------
 SELECT절에서 사용되는 부속질의로, 부속질의의 결과 값을 단일 행, 단일 열의 스칼라 값으로 반환한다. 만약 결과 값이 다중 행이거나
 다중 열이라면 DBMS는 그 중 어떤 행, 어떤 열을 출력해야 하는지 알 수 없어서 에러를 출력한다.
 결과가 없는 경우에는 NULL을 출력함. 일반적으로 SELECT, UPDATE SET절에 사용된다. 
@@ -302,20 +303,25 @@ SELECT절에서 사용되는 부속질의로, 부속질의의 결과 값을 단일 행, 단일 열의 스칼라
 주질의(main query, 외부질의)와 부속질의(sub query, 내부 질의)로 구성된다.
 
 인라인 뷰
+-------------
 FROM절에서 결과를 뷰(view)형태로 반환하기 때문에 인라인 뷰라고 한다.
 
 중첩질의
+-------------
 WHERE절에 술어와 같이 사용되며 결과를 한정 시키기 위해 사용된다. 상관 혹은 비상관 형태이다.
 
 조인을 사용할 경우 
-: customer테이블과 orders테이블의 고객번호로 조인을 한 후, 필요한 데이터를 추출하는 방식.
+-------------
+customer테이블과 orders테이블의 고객번호로 조인을 한 후, 필요한 데이터를 추출하는 방식.
 
 부속질의를 사용할 경우
+-------------
 : customer 테이블에서 박지성 고객의 고객번호를 찾고, 찾은 고객번호를 바탕으로 orders 테이블에서 확인한다. 
 
 IN은 NULL값을 가져올 수 없다. EXISTS는 NULL값을 가져올 수 있음.
 
 #EXISTS에 대한 개념↓
+-------------
 
 SELECT name, address
 FROM customer cs
@@ -331,13 +337,13 @@ ORDER BY절과 GROUP BY절이 헷갈린다.
 다시 정리를 한다.
 
 #ON절과 WHERE절
-
+-------------
 WHERE절은 조건에 맞는 검색을 할 때 사용한다. 부속질의(중첩질의)에서도 사용됨. 
 조건으로 사용할 수 있는 술어 는 비교, 범위, 집합, 패턴, NULL로 구분할 수 있다.
 
 
-#ORDER BY절과 
-GROUP BY절의 차이(너무 헷갈림)
+#ORDER BY절과 GROUP BY절의 차이(너무 헷갈림)
+-------------
 두 개의 절은 비슷한 느낌이 있어서 혼동되기 쉬우나, 
 엄연히 다른 역할을 수행하고 있기 때문에 다르다.
 우선, ORDER BY절은 어떠한 조회된 결과의 데이터물을 일목요연하게 정리하고 싶을 때,
@@ -345,6 +351,7 @@ GROUP BY절의 차이(너무 헷갈림)
 한마디로 말해서 데이터를 검색해서 조회해서 봐야할 때.
 
 GROUP BY절은 
+-------------
 데이터들을 작은 그룹으로 분류하여 그룹에 대한 항목별로 통계적인 정보를 얻고자 하는데 
 사용된다. 이를테면, A테이블이 있을 때 샐러리(컬럼)가 30인 사람들의 그룹을 오름차순 정렬로
 추출할 수 있다. 또한 GROUP BY절에서는 ALIAS명을 사용할 수 없다.
@@ -356,12 +363,15 @@ HAVING절은 일반적으로 GROUP BY절에 위치해서 사용된다.
 집계 함수에 GROUP BY를 사용하는 이유가 그것이다. 판매량이나, 판매품목을 집계해야할 때라든지...
 그럴때 사용하는 것이다. 
 
-ORDER BY절은 칼럼명 대신에 위에서 사용한 ALIAS명도 사용가능하다.
+ORDER BY절은 
+-------------
+칼럼명 대신에 위에서 사용한 ALIAS명도 사용가능하다.
 정렬방식을 지정하지 않으면 일반적으로 오름차순으로 정렬되며,
 NULL값은 오름차순으로 정렬했을 경우에는 가장 마지막에,
 내림차순으로 정렬했을 경우에는 맨 앞에 온다.
 
 ##SQL문의 수행 단계는 아래와 같다.
+-------------
 -발췌 대상 테이블을 참조한다. (FROM)
 -발췌 대상 데이터가 아닌 것은 제거한다. (WHERE)
 -행들을 그룹화합니다.(GROUP BY -> GROUPPING)
@@ -373,9 +383,11 @@ NULL값은 오름차순으로 정렬했을 경우에는 가장 마지막에,
  
 
 WHERE절과 ON절에 대해 
-우선 ON절은 조인 구문에서만 사용된다.
+-------------
+ON절은 조인 구문에서만 사용된다.
 
 JOIN
+-------------
 조인은 그냥 간단히 말해서 테이블과 다른 테이블의 행들을 연결해서 두 개이상의 테이블을 
 결합하는 것을 말한다.
 조건이 없는 테이블 간의 조인은 카티전 프로덕트라고 한다. 
