--- a/7.6_오라클정리.md
+++ b/7.6_오라클정리.md
@@ -227,7 +227,7 @@ CREATE TABLE book(
 );
 
 constraint : 제약조건
-
+-------------
 ex) null값을 허용하면 안됨
 primary key는 일반적인 속성을 다 정해준 후 써주는 편
 
@@ -392,6 +392,17 @@ JOIN
 결합하는 것을 말한다.
 조건이 없는 테이블 간의 조인은 카티전 프로덕트라고 한다. 
 
+뷰(VIEW)
+--------------
+뷰는 하나 이상의 테이블을 합하여 만든 가상의 테이블.
+
+가상의 테이블. _실제 데이터는 가지고 있지 않음._ 
+→ 복잡한 질의를 간단히 작성
+
+뮤트리얼 라이즈드 뷰(?)
+
+장점
+편리성 및 재사용성 : 자주 사용되는 복잡한 질의를 뷰로 미리 정의해 놓을 수 있음. 
 
  
 
