--- a/7.6_오라클정리.md
+++ b/7.6_오라클정리.md
@@ -373,7 +373,7 @@ NULL값은 오름차순으로 정렬했을 경우에는 가장 마지막에,
 ##SQL문의 수행 단계는 아래와 같다.
 -------------
 -발췌 대상 테이블을 참조한다. (FROM)
--발췌 대상 데이터가 아닌 것은 제거한다. (WHERE)
+-발췌 대상 데이터가 아닌 것은 제거한다. (WHERE)*/
 -행들을 그룹화합니다.(GROUP BY -> GROUPPING)
 -그룹함수의 값의 조건에 맞는 것만을 출력한다(HAVING)
 -데이터 값을 계산한다(SELECT)
@@ -398,13 +398,36 @@ JOIN
 
 가상의 테이블. _실제 데이터는 가지고 있지 않음._ 
 → 복잡한 질의를 간단히 작성
+/*
 
 뮤트리얼 라이즈드 뷰(?)
 
 장점
 편리성 및 재사용성 : 자주 사용되는 복잡한 질의를 뷰로 미리 정의해 놓을 수 있음. 
 
- 
+
+단순뷰(simple view) - 뷰생성 서브쿼리에 조인 조건 없이 1개의 테이블로부터 만들어지는 뷰
+복합뷰(complex view) - 뷰생성 서브 쿼리에 여러개의 테이블이 조인되어 생성되는 뷰
+인라인뷰(inline view) - 해당 질의에서만 필요한 뷰일 경우 FROM 바로 적어서 사용하는 뷰
+
+View의 생성
+CREATE [or replace] view 뷰네임
+as
+subquery
+[with read only]
+*/
+
+
+인덱스
+
+인덱스의 생성문법
+CREATE [REVERSE] | [UNIQUE] INDEX 인덱스이름]
+ON 테이블이름 {컬럼 [ASC | DESC] {, 컬럼 {ASC | DESC]} ....]} [;]
+주기적으로 관리 작업을 해주지 않으면 퍼포먼스가 떨어짐.
+인덱스를 주기적으로 리빌드 해줘야 함.
+
+자동으로 리빌드 시키려면 트리거 시키려면 됨.
+
 
 
 
