--- a/7.6_오라클정리.md
+++ b/7.6_오라클정리.md
@@ -1,46 +1,9 @@
 #dbnote
 
---employees 테이블로부터 아이디를 조회하는 질의문<이렇게 주석처리할 수 있음.
-SELECT *
-FROM employees;
-SELECT employee_id, last_name, first_name
-FROM employees;
-
-/*
-노트의 내용.....
-....
-...
-*/
 
 
 
---급여순으로 직원의 이름과 급여를 검색하시오.
-↓이런 식으로 구성 가능.
-
-SELECT last_name, salary
-FROM employees
-ORDER BY salary;
-
-중복을 제거해줄 수 있는 DISTINCT 구문.
-SELECT employee_id, job_id
-FROM employees
-WHERE last_name LIKE 'K%';
-
-
-SELECT employee_id, job_id
-FROM employees
-WHERE last_name LIKE '_a%';
-
-가령 주소지가 흥덕구, 서원구에 해당하는 사람을 뽑고 싶을 때 where 주소가 흥덕구 or 주소가 서원구 로 두개의 조건 중에 하나만 해당하면 나오게 하는.. 이럴 때 IN이 유용하게 쓰임. 
-
-
-
-SELECT employee_id, last_name, department_id, salary
-FROM employees
-ORDER BY department_id, salary DESC, last_name;
-
-
-ROLLBACK;
+ROLLBACK
 -------------
 DELETE문을 사용해 삭제한 후 롤백으로 데이터 복구가 가능하다. 
 TRUNCATE를 사용해 데이터를 지우면 빠르게 삭제되나, 복구가 되지 않는다.
@@ -50,9 +13,12 @@ Descending 내림차순
 Ascending 오름차순
 -------------
 
-sysdate 현재 시스템상의 날짜와 시간을 반영가능할 수 있도록 하는 함수.
+sysdate 
 -------------
+현재 시스템상의 날짜와 시간을 반영가능할 수 있도록 하는 함수.
 
+HAVING 절
+-----------------
 HAVING 절은 그룹에 대한 제한을 두고자 할 경우에 사용함.
 그룹함수와 함께 사용.
 GROUP BY  뒤에다가 적용.
@@ -146,143 +112,7 @@ right)
 서브쿼리는 반드시 괄호에 감싸서 수행되어야 함.
 서브쿼리는 비교 연산자의 우측에 위치
 
-select max
-from employees
 
-급여 < ANY(100,200,300)
-any는 <,,,이중에 하나라도>라는 뜻.
-최종적인 결과는 이중에서 제일 큰 값보다 작은
-
-급여 < ALL (100,200,300)
-급여가 110인 경우, 100은 해당이 안됨.
-괄호 안에 포함된 값들 보다도 작은.
-
-alter, modified, drop
-
-selection, projection
-
-
-중복되는 것도 보이고 싶을 때 *
-따로 DISTINCT 쓰면 중복되는 것을 제거할 수 있음.
-일시적으로 사용됨. 효용이 별로 없음. 카티전 프로덕트.
-
-
-create tablespace 테이블스페이스 이름
---data '데이터파일경로'
-size초기사이즈
-autoextend on next 자동증가사이즈
-maxsize 최대사이즈;
-
-create tablespace madang javadb datafile ' d:\honggildong\madang.dbf'
-size 50M
-autoextend on next 10M maxsize unlimited;
-
-로그인이 안될 때-
-
-cmd창 열고 sqlplus/ as sysdba
-alter user system identified by 1234;
-
-
-CREATE TABLESPACE
-DROP TABLESPACE 이름;
-이렇게 하면 삭제가 됨. 물리적으로 다시 지우고 
-
-
--사용자계정 만들기
-create user 아이디 identified by 비밀번호
-default tablespace 테이블스페이스이름;
-
---권한 부여하기
-
-grant 권한 to 아이디;
-참고.
-connect : 로그인 권한
-resource : 자원을 사용할 수 있는 권한 
-dba : db 관리자 권한
-
---테이블 생성하기
-
-create table syntax:
-CREATE TABLE schema_name(생략해도 됨).table_name (
-column_1 data_type column_constraint,(< 컬럼 단위로 주어지는 제약조건)
-column_2 data_type coumn_constraint,
-...
-);
-
-
-create table syntax:
-CREATE TABLE table_name (
-column_1 data_type 
-column_2 data_type 
-...
-);
-
-CREATE TABLE book(
-    Bookid number not null, 
-    bookname, varchar2(50) not null,
-    publisher varchar2(10) not null,
-    price number
-    primary key(bookid)
-
-);
-
-constraint : 제약조건
--------------
-ex) null값을 허용하면 안됨
-primary key는 일반적인 속성을 다 정해준 후 써주는 편
-
-
-책의 제목은 공백이 있어선 안됨.
-
-
-Book(bookid, bookname, publisher, price)
-
-
-DELETE FROM book;
-WHERE bookid = 2;
-특정한 조건을 이렇게 줘야만 원하는 것을 삭제가능.
-제약을 걸어줘야 함.
-특정한 레코드에 대해서만. where 사용.
-
-rollback, 
-commit에 대한 개념
-varchar2
-
-book(bookid, bookname, publisher,price)
-customer(custid, name, address, phone)
-orders(orderid, custid, bookid,saleprice,orderdate)
-
-CREATE TABLE...(
-주키속성명,
-.....,
-외래키속성명,
-.....,
-PRIMARY KEY(주키속성명),
-FOREIGN KEY 외래키속성명 REFERENCES 테이블이름(속성이름)
-
-CREATE TABLE orders(
-....
-custid number(3),
-.....
-FOREIGN KEY custid REFERENCES customer(custid),
-);
-
-
-물리적 독립성,
-논리적 독립성
-데이터베이스의 독립성의 개념
-3계층 구조.
-매핑이 있고 각 단계 간 대응 관계를 정의.
-중복의 최소화는 가능함. 
-아노말리, abnormal를 제거하고 무결성 상태를 만드는 것. 
-자료를 삽입하면서 생기는 문제들, 업데이트할 때 생길 수 있는 문제들을
-우리가 데이터를 정의하면서 정리를 해줘야 함.
-인서트할 때 문제가 생기면 ~ 해라 < 제약조건(constraint)
-
-
-Primary키는 null값을 허용하지 않음.
-unique는 null값을 허용함.
-ON DELETE CASCADE->참조 된 것까지 다같이 삭제
 
 #부속질의
 -------------
@@ -419,7 +249,7 @@ subquery
 
 
 인덱스
-
+----------------
 인덱스의 생성문법
 CREATE [REVERSE] | [UNIQUE] INDEX 인덱스이름]
 ON 테이블이름 {컬럼 [ASC | DESC] {, 컬럼 {ASC | DESC]} ....]} [;]
